--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,10 @@ body {
     width: 60px;
     height: 60px;
     border: 1px solid black;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .black-tile {
@@ -39,6 +43,6 @@ body {
 }
 
 .piece {
-    width: 60px;
-    height: 60px;
+    width: 65px;
+    height: 65px;
 }
