Force king to always be first in piece list
Since it's important to check where the king will be during the match,
keeping the king first in the piece list will make it easier to remember
it's location, instead of using a dictionary.

Also change tile background colours

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,6 @@ body {
 .tile {
     width: 60px;
     height: 60px;
-    border: 1px solid black;
 
     display: flex;
     align-items: center;
@@ -35,7 +34,7 @@ body {
 }
 
 .black-tile {
-    background-color: #3d2b1f;
+    background-color: #836953;
 }
 
 .white-tile {
