Add basic piece selecting
Now when a piece is selected, all valid moves can be found and
highlighted. This doesn't keep track of en passant, pawns at the end of
the board, or if a piece is pinned. So it does highlight illegal moves
still. That's coming next.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-    display: border-box;
+    box-sizing: border-box;
 }
 
 body {
@@ -44,4 +44,8 @@ body {
 .piece {
     width: 65px;
     height: 65px;
+}
+
+.highlighted {
+    border: 2px solid lime;
 }
