Change highlighting colours, move unhilight to seperate function

--- a/styles.css
+++ b/styles.css
@@ -34,10 +34,12 @@ body {
 }
 
 .black-tile {
+    border: 2px solid #836953;
     background-color: #836953;
 }
 
 .white-tile {
+    border: 2px solid #ebe7da;
     background-color: #ebe7da;
 }
 
@@ -48,4 +50,12 @@ body {
 
 .highlighted {
     border: 2px solid lime;
+}
+
+.tile:hover {
+    border: 2px solid blue;
+}
+
+.tile.selected {
+    border: 2px solid orange;
 }
