--- a/styles.css
+++ b/styles.css
@@ -52,9 +52,9 @@ body {
     border: 2px solid lime;
 }
 
-.tile:hover {
+/*.tile:hover {
     border: 2px solid blue;
-}
+}*/
 
 .tile.selected {
     border: 2px solid orange;
