--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,10 @@ body {
     border: 2px solid lime;
 }
 
+.highlighted.hovering {
+    border: 2px solid blue;
+}
+
 .tile.selected {
     border: 2px solid orange;
 }
